# rm_buff

./: README.md
autoaim_antidart/: CMakeLists.txt  package.xml
autoaim_antidart/config/: params.yaml
autoaim_antidart/include/: pnp_solver.hpp  trajectory.hpp
autoaim_antidart/launch/: autoaim_anti_dart.launch.py
autoaim_antidart/src/: antidart_node.cpp
autoaim_buff/: CMakeLists.txt  package.xml
autoaim_buff/config/: VTM_camera_params.yaml  buff.yaml  params.yaml  ukf_params.yaml
autoaim_buff/include/: buff.hpp  filter.hpp  math_utils.hpp  pnp_buff.hpp  select_utils.hpp  trajectory.hpp  ukf_buff.hpp
autoaim_buff/launch/: autoaim_buff.launch.py
autoaim_buff/src/: .buff_node.cpp  buff_node.cpp  buff_node.cpp.old
autoaim_camera/: CMakeLists.txt  package.xml
autoaim_camera/config/: camera_info.yaml  params.yaml
autoaim_camera/launch/: autoaim_camera.launch.py
autoaim_camera/src/: camera_node.cpp
autoaim_detection/: CMakeLists.txt  package.xml
autoaim_detection/config/: params.yaml
autoaim_detection/include/: antidart_detection.hpp  infer_engine.hpp
autoaim_detection/include/cuda_infer/: infer_cuda.hpp
autoaim_detection/include/cuda_infer/impl/: common.hpp  preprocess.h
autoaim_detection/include/openvino_infer/: infer_openvino.hpp
autoaim_detection/launch/: autoaim_detection.launch.py
autoaim_detection/src/: detection_node.cpp
autoaim_highshoot/: CMakeLists.txt  package.xml
autoaim_highshoot/config/: params.yaml
autoaim_highshoot/include/: trajectory.hpp
autoaim_highshoot/launch/: autoaim_highshoot.launch.py
autoaim_highshoot/src/: highshoot_node.cpp
autoaim_interfaces/: CMakeLists.txt  package.xml
autoaim_interfaces/msg/: CommRecv.msg  CommSend.msg  DebugInfo.msg  Detection.msg
autoaim_prediction/: CMakeLists.txt  package.xml
autoaim_prediction/config/: VTM_camera_params.yaml  params.yaml  tracker_params.yaml
autoaim_prediction/include/: kalman_filters.hpp  math_utils.hpp  pnp_solver.hpp  tracker.hpp
autoaim_prediction/launch/: autoaim_prediction.launch.py
autoaim_prediction/src/: prediction_node.cpp
autoaim_recorder/: CMakeLists.txt  package.xml
autoaim_recorder/config/: params.yaml
autoaim_recorder/launch/: autoaim_recorder.launch.py
autoaim_recorder/src/: recorder_node.cpp
autoaim_robot_description/: CMakeLists.txt  package.xml
autoaim_robot_description/config/: params.yaml
autoaim_robot_description/launch/: autoaim_robot_description.launch.py
autoaim_robot_description/src/: robot_description_node.cpp
autoaim_serial_driver/: CMakeLists.txt  package.xml
autoaim_serial_driver/config/: params.yaml
autoaim_serial_driver/include/: crc_checksum.hpp  receive_packet.hpp  send_packet.hpp  serial_port.hpp  serial_utils.hpp
autoaim_serial_driver/launch/: autoaim_serial_driver.launch.py
autoaim_serial_driver/src/: serial_driver_node.cpp
launcher/: CMakeLists.txt  package.xml
launcher/launch/: launcher.py
rosbag2_2025_07_03-18_17_10/: metadata.yaml  rosbag2_2025_07_03-18_17_10_0.db3
