<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoaim_prediction</name>
  <version>0.0.0</version>
  <description>Solve 3D coordinate of target and predict the position.</description>
  <maintainer email="mitsuha.2213@gmail.com">@Polyacetone</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>autoaim_interfaces</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
